# qoeur-and-qoeur-lab-and-qompo

./: Cargo.toml  README.md  rustfmt.toml
examples/: Cargo.toml
examples/web/: basic.qmp  minimal.qmp
src/bootstrap/: Cargo.toml  arg.rs  cmd.rs  lib.rs  reader.rs
src/bootstrap/kind/: arg.rs  cmd.rs  input.rs  mod.rs  mode.rs  optional.rs  path.rs
src/bootstrap/read/: file.rs  line.rs  mod.rs
src/bootstrap/run/: copyright.rs  help.rs  license.rs  mod.rs  repl.rs  version.rs
src/doc/: roadmap.md  syntax.md
src/qoeurc/: Cargo.toml  README.md
src/qoeurc/src/: lib.rs
src/qoeurc/src/analyzer/: interpreter.rs  mod.rs  tests.rs
src/qoeurc/src/analyzer/environment/: scope.rs
src/qoeurc/src/converter/: mod.rs  parser.rs  tests.rs
src/qoeurc/src/reporter/: diagnostic.rs  handler.rs  location.rs  mod.rs  tests.rs
src/qoeurc/src/tokenizer/: ascii.rs  mod.rs  scanner.rs  tests.rs  token.rs
src/qoeurc/src/tokenizer/kind/: comment.rs  group.rs  keyword.rs  literal.rs  mod.rs  operator.rs  precedence.rs  symbol.rs  token.rs
src/qoeurc/src/transformer/: mod.rs  tests.rs  transpiler.rs
src/qoeurc/src/utils/: iters.rs  mod.rs  tests.rs
src/qoeurc/src/value/: mod.rs  tests.rs
src/qoeurc/src/value/instruction/: array.rs  attribute.rs  binary.rs  block.rs  call.rs  capsule.rs  closure.rs  comment.rs  control.rs  expression.rs  function.rs  function_arg.rs  group.rs  hash.rs  identifier.rs  index.rs  loop_for_in.rs  loop_for_range.rs  loop_infinite.rs  loop_while.rs  mod.rs  program.rs  return_value.rs  shebang.rs  statement.rs  ty.rs  unary.rs  val.rs
src/qoeurc/src/value/primitive/: bool.rs  char.rs  float.rs  int.rs  mod.rs  str.rs
src/tools/qoeur-lab/: .gitignore  Cargo.toml  README.md
src/tools/qoeur-lab/src/: lib.rs  utils.rs
src/tools/qoeur-lab/www/: README.md  index.html  package-lock.json  package.json  webpack.config.js
src/tools/qoeur-lab/www/src/: index.js
src/tools/qoeur-lab/www/src/components/: codeEditor.js  compiler.js
src/tools/qoeur-lab/www/src/styles/css/: editor.css  global.css  terminal.css
src/tools/qompo/: .gitignore  Cargo.toml  LICENSE  README.md  qompo.config.toml
src/tools/qompo/src/: lib.rs  mains.rs
src/tools/qompo/src/compiler/: mod.rs  parser.rs  transpiler.rs
src/tools/qompo/src/computer/: app.rs  render.rs
src/tools/qompo/src/gui/: app.rs  mod.rs  window.rs
src/tools/qompo/src/utils/: ascii.rs  log.rs  mod.rs
src/tools/qompo/src/value/: attr.rs  capsule.rs  mod.rs  program.rs  tag.rs
src/tools/qompo/www/: bootstrap.js  example.qmp  index.html  index.js  package.json  webpack.config.js
