[package]
name = "qompo"
version = "0.0.0"
description = "composify accessible apps on the web 👾"
authors = ["monsieurbadia <iam@monsieurbadia.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "qompo"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "qompo"
path = "src/mains.rs"
doctest = false

[dependencies]
qoeurc = { path = "../../qoeurc" }
cfg-if = "0.1.2"
js-sys = "0.3.4"
#notify = "4.0.15"
rsass = "0.16.0"
wasm-bindgen = "0.2.69"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web-view = "0.7.2"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.19"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
indicatif = "0.15.0"

futures-spawn = "0.1.1"
futures-threadpool = "0.1.0"

[dependencies.web-sys]
version="0.3.2"
features = [
  'console',
  'Document',
  'Text',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'NodeList',
  'Window',
  'EventListener',
  'EventTarget',
  'Event',
  'KeyboardEvent',
  'MouseEvent',
  'CssStyleDeclaration',
  'Performance',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"